@@ -397,7 +397,10 @@ public abstract class DefaultCompilerAdapter implements CompilerAdapter {
     /**
      * Do the compile with the specified arguments.
      * @param args - arguments to pass to process on command line
-     * @param firstFileName - index of the first source file in args
+     * @param firstFileName - index of the first source file in args,
+     * if the index is negative, no temporary file will ever be
+     * created, but this may hit the command line length limit on your
+     * system.
      */
     protected int executeExternalCompile(String[] args, int firstFileName) {
         String[] commandArray = null;
@@ -411,12 +414,13 @@ public abstract class DefaultCompilerAdapter implements CompilerAdapter {
              * POSIX seems to define a lower limit of 4k, so use a temporary
              * file if the total length of the command line exceeds this limit.
              */
-            if (Commandline.toString(args).length() > 4096) {
+            if (Commandline.toString(args).length() > 4096 
+                && firstFileName >= 0) {
                 PrintWriter out = null;
                 try {
                     String userDirName = System.getProperty("user.dir");
                     File userDir = new File(userDirName);
-                    tmpFile = fileUtils.createTempFile("jikes", "", userDir);
+                    tmpFile = fileUtils.createTempFile("files", "", userDir);
                     out = new PrintWriter(new FileWriter(tmpFile));
                     for (int i = firstFileName; i < args.length; i++) {
                         out.println(args[i]);
